exports[`<App /> matches render snapshot - no children 1`] = `
<div
  className="container">
  <div
    className="row header">
    <div
      className="six columns">
      <h1>
        MusicQ
      </h1>
    </div>
    <div
      className="six columns">
      <a
        className="u-pull-right"
        onClick={[Function]}
        style={Object {}}>
        <div
          className="burger">
          <div
            className="burger-bar" />
          <div
            className="burger-bar" />
          <div
            className="burger-bar" />
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<App /> matches render snapshot - with children 1`] = `
<div
  className="container">
  <div
    className="row header">
    <div
      className="six columns">
      <h1>
        MusicQ
      </h1>
    </div>
    <div
      className="six columns">
      <a
        className="u-pull-right"
        onClick={[Function]}
        style={Object {}}>
        <div
          className="burger">
          <div
            className="burger-bar" />
          <div
            className="burger-bar" />
          <div
            className="burger-bar" />
        </div>
      </a>
    </div>
  </div>
  <div>
    hello.
  </div>
</div>
`;
